--- a/style.css
+++ b/style.css
@@ -5,16 +5,17 @@
     font-style: normal;
 }
 
-    {
-    margin: 0;
-    Padding: 0;
+.header {
+    background-image: url(B12A01-landing-launchpad/Assets/Hero-bg.png);
 
 }
 
 /* Nav Styles */
 nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    margin: 50px 200px;
 
 }
 
@@ -35,6 +36,32 @@ nav {
 
 
 
-.text-button {
+.btn-primary {
+    background-color: #4E47FF;
+    font-weight: bold;
+    font-size: 20px;
     color: #FFFFFF;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border: none;
+}
+
+/*banner styles */
+.banner {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.banner-content {
+
+
+    max-width: 580px;
+}
+
+.banner-tittle {
+    font-weight: 600;
+    font-size: 45px;
+
 }
