--- a/style.css
+++ b/style.css
@@ -96,16 +96,39 @@ nav {
 }
 
 .user-section {
-    background-color: #c2c1ef;
+    background-color: #d7d7f1;
     align-items: center;
-    justify-content: space-between;
+    border-radius: 5px;
     margin: 50px 200px;
     padding: 50px 50px 50px 50px;
-    border-radius: 40px;
+
+
     height: fit-content;
+    min-width: fit-content
 }
 
 .user-header {
     font-size: xx-large;
     justify-content: center;
+    margin-left: 20%;
+
+}
+
+.user-elements {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.user-heading {
+    font-size: 60px;
+    color: #4E47FF;
+    padding: 30px;
+}
+
+.user-para {
+    color: #93919e;
+    padding: 5px 30px 30px 30px;
+    font-size: large;
+    margin-top: 0;
 }
